--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
   --secondary-bg-color: #f5f4fa;
   --color-btn-primery: #2196f3;
   --color-logo-stodio: #000000;
+  --trans: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p,
@@ -150,13 +151,13 @@ body {
 .site-nav .link {
   display: block;
   padding-top: 25px;
-  padding-bottom: 25px;
-
+  padding-bottom: 25px;  
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  transition: color var(--trans);
 }
 .site-nav .item + .item {
   margin-left: 50px;
@@ -192,6 +193,7 @@ body {
   align-items: center;
   justify-content: center;
   color: var(--title-text-color);
+  transition: color var(--trans);
 }
 .contacts-list .link:hover,
 .contacts-list .link:focus {
@@ -246,6 +248,8 @@ body {
   line-height: 1.88;
   letter-spacing: 0.06em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color var(--trans), color var(--trans);
+  
 }
 
 .button.hero:hover,
@@ -263,14 +267,16 @@ body {
   border: none;
   color: var(--primary-text-color);
   background-color: var(--secondary-bg-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: background-color var(--trans), color var(--trans);
+    
 }
 
 .button.secondary:hover,
 .button.secondary:focus {
   color: var(--primary-white-color);
   background-color: var(--color-btn-primery);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   outline: none;
 }
 /*            Overlay       */
@@ -322,6 +328,7 @@ background-color: #C4C4C4;
   align-items: center;
   justify-content: center;
 
+  
   background-color: #F5F4FA;
   
 }
@@ -331,14 +338,14 @@ background-color: #C4C4C4;
 }
 
 .feature-list .title {
-  color: var(--primary-text-color);
-
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+
+  color: var(--primary-text-color);
 }
 
 .feature-list .item {
@@ -346,11 +353,11 @@ background-color: #C4C4C4;
   text-align: left;
 }
 
-.feature-list .text {
-  color: var(--title-text-color);
+.feature-list .text {  
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+  color: var(--title-text-color);
 }
 
 /*          Job             */
@@ -406,8 +413,6 @@ background-color: #C4C4C4;
 .team-img {
   padding-top: 30px;
   padding-bottom: 30px;
-  
-
 }
 
 .team-soc-list {
@@ -428,7 +433,11 @@ background-color: #C4C4C4;
   align-items: center;
   justify-content: center;  
   border-radius: 50%;
+  transition: background-color var(--trans);
   Fill: #AFB1B8
+}
+.team-soc-icon {
+  transition: fill var(--trans);
 }
 
 .team-soc-link:hover,
@@ -455,8 +464,6 @@ background-color: #C4C4C4;
 .customers-item { 
   width: calc((100% - 150px) / 6);
   height: 90px;
- 
-
 }
 .customers-link {
   width: 100%;
@@ -465,9 +472,13 @@ background-color: #C4C4C4;
   border-radius: 4px;  
   display: flex;
   align-items: center;
-  justify-content: center;
-  Fill: #AFB1B8
+  justify-content: center;  
+  Fill: #AFB1B8;
+    
+}
 
+.customers-soc-icon {
+  transition: fill var(--trans);
 }
 
 .customers-link:hover,
@@ -479,7 +490,6 @@ background-color: #C4C4C4;
 .customers-link:focus .customers-soc-icon {
   fill: var(--accent-color);
 }
-
 
 
 /* Наші роботи */
@@ -513,7 +523,7 @@ background-color: #C4C4C4;
   margin-right: 0;
 }
 .work-list .item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+  margin-bottom: 0;  
 }
 
 .work-link {
@@ -581,6 +591,10 @@ background-color: #C4C4C4;
   margin-bottom: 9px;
 }
 
+.footer .link {
+  transition: color var(--trans);
+}
+
 .footer .link:hover,
 .footer .link:focus {
   color: var(--accent-color);
@@ -592,6 +606,7 @@ background-color: #C4C4C4;
 .footer-mail,
 .footer-tel {
   color: rgba(255, 255, 255, 0.6);
+  transition: color var(--trans);
 
   font-size: 14px;
   line-height: 1.71;
@@ -606,6 +621,7 @@ background-color: #C4C4C4;
 .footer-tel:hover,
 .footer-tel:focus {
   color: var(--accent-color);
+  
 }
 
 .footer > .container {
