--- a/css/styles.css
+++ b/css/styles.css
@@ -137,10 +137,10 @@ body {
 }
 
 /* Site nav  */
-.main-nav {
+/*.main-nav {
   display: flex;
   align-items: center;
-}
+}*/
 
 /* Site nav  */
 .site-nav {
@@ -149,7 +149,6 @@ body {
 }
 
 .site-nav .link {
-  display: block;
   padding-top: 25px;
   padding-bottom: 25px;
   color: var(--primary-text-color);
@@ -170,9 +169,28 @@ body {
   color: var(--accent-color);
 }
 
-.site-nav .link.current {
+.site-nav .link.current {  
   color: var(--accent-color);
+  
 }
+.site-nav .link.current::before {
+content: "";
+min-width: 48px;
+height: 4px;
+border-radius: 2px;
+position: absolute;
+top: 63px;
+background-color: var(--accent-color);
+}
+.site-nav .link.current.portfolio::before {
+  content: "";
+  min-width: 78px;
+  height: 4px;
+  border-radius: 2px;
+  position: absolute;
+  top: 63px;
+  background-color: var(--accent-color);
+  }
 /*         Contacts          */
 .contacts-list {
   display: flex;
@@ -533,7 +551,7 @@ body {
 
 .work-link {
   display: block;
-  text-decoration: none;  
+  text-decoration: none;
 }
 
 .work-top-wrap {
@@ -555,7 +573,6 @@ body {
 
 .work-img {
   display: block;
-  
 }
 
 .work-title {
@@ -715,18 +732,23 @@ body {
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
   width: 528px;
   height: 581px;
-  background-color:#ffffff;
+  background-color: #ffffff;
   position: absolute;
   border-radius: 4px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  
+  transform: translate(-50%, -50%) scale(1) rotate(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0) rotate(-360deg);
+  border-radius: 70%;
 }
 
 .modal-close {
@@ -742,4 +764,9 @@ body {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
