--- a/css/styles.css
+++ b/css/styles.css
@@ -169,28 +169,27 @@ body {
   color: var(--accent-color);
 }
 
-.site-nav .link.current {  
+.site-nav .link.current {
   color: var(--accent-color);
-  
 }
 .site-nav .link.current::before {
-content: "";
-min-width: 48px;
-height: 4px;
-border-radius: 2px;
-position: absolute;
-top: 63px;
-background-color: var(--accent-color);
+  content: '';
+  min-width: 48px;
+  height: 4px;
+  border-radius: 2px;
+  position: absolute;
+  top: 63px;
+  background-color: var(--accent-color);
 }
 .site-nav .link.current.portfolio::before {
-  content: "";
+  content: '';
   min-width: 78px;
   height: 4px;
   border-radius: 2px;
   position: absolute;
   top: 63px;
   background-color: var(--accent-color);
-  }
+}
 /*         Contacts          */
 .contacts-list {
   display: flex;
@@ -298,7 +297,9 @@ background-color: var(--accent-color);
   cursor: pointer;
   color: var(--primary-text-color);
   background-color: var(--secondary-bg-color);
-  transition: background-color var(--trans), color var(--trans);
+  transition: background-color var(--trans), color var(--trans),
+    box-shadow var(--trans) 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .button.secondary:hover,
@@ -307,7 +308,7 @@ background-color: var(--accent-color);
   background-color: var(--color-btn-primery);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  outline: none;
+  outline: transparent;
 }
 /*            Overlay       */
 
@@ -397,7 +398,43 @@ background-color: var(--accent-color);
 .job-list {
   display: flex;
 }
+.job-list .item.one::before {
+  content: 'Десктопні додатки';
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  padding-top: 27px;
+  top: 1422px;
+  text-transform: uppercase;
 
+  color: var(--primary-white-color);
+  background-color:  rgba(47, 48, 58, 0.8);
+  
+}
+.job-list .item.two::before {
+  content: 'Мобільні додатки';
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  padding-top: 27px;
+  top: 1422px;
+  text-transform: uppercase;
+
+  color: var(--primary-white-color);
+  background-color:  rgba(47, 48, 58, 0.8);
+}
+.job-list .item.three::before {
+  content: 'Дизайнерські рішення';
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  padding-top: 27px;
+  top: 1422px;
+  text-transform: uppercase;
+
+  color: var(--primary-white-color);
+  background-color:  rgba(47, 48, 58, 0.8);
+}
 /* Команда */
 .team {
   padding-top: 94px;
@@ -604,6 +641,7 @@ background-color: var(--accent-color);
   line-height: 1.56;
   background-color: rgba(33, 150, 243, 0.9);
   color: var(--primary-white-color);
+  transition: var(--trans);
   transform: translateY(100%);
   overflow: auto;
 }
@@ -732,7 +770,8 @@ background-color: var(--accent-color);
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -744,7 +783,8 @@ background-color: var(--accent-color);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1) rotate(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0) rotate(-360deg);
