--- a/css/styles.css
+++ b/css/styles.css
@@ -297,9 +297,8 @@ body {
   cursor: pointer;
   color: var(--primary-text-color);
   background-color: var(--secondary-bg-color);
-  transition: background-color var(--trans), color var(--trans),
-    box-shadow var(--trans) 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: var(--trans), background-color var(--trans), color var(--trans),
+    box-shadow var(--trans);
 }
 
 .button.secondary:hover,
@@ -308,7 +307,7 @@ body {
   background-color: var(--color-btn-primery);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  outline: transparent;
+  outline: none;
 }
 /*            Overlay       */
 
@@ -408,8 +407,7 @@ body {
   text-transform: uppercase;
 
   color: var(--primary-white-color);
-  background-color:  rgba(47, 48, 58, 0.8);
-  
+  background-color: rgba(47, 48, 58, 0.8);
 }
 .job-list .item.two::before {
   content: 'Мобільні додатки';
@@ -421,7 +419,7 @@ body {
   text-transform: uppercase;
 
   color: var(--primary-white-color);
-  background-color:  rgba(47, 48, 58, 0.8);
+  background-color: rgba(47, 48, 58, 0.8);
 }
 .job-list .item.three::before {
   content: 'Дизайнерські рішення';
@@ -433,8 +431,9 @@ body {
   text-transform: uppercase;
 
   color: var(--primary-white-color);
-  background-color:  rgba(47, 48, 58, 0.8);
+  background-color: rgba(47, 48, 58, 0.8);
 }
+
 /* Команда */
 .team {
   padding-top: 94px;
@@ -589,8 +588,7 @@ body {
 .work-link {
   display: block;
   text-decoration: none;
-  transition: box-shadow var(--trans) 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-  0px 1px 1px rgba(0, 0, 0, 0.12);
+  transition: box-shadow var(--trans);
 }
 
 .work-top-wrap {
@@ -602,7 +600,7 @@ body {
 .work-link:hover,
 .work-link:focus {
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-  0px 1px 1px rgba(0, 0, 0, 0.12);
+    0px 1px 1px rgba(0, 0, 0, 0.12);
   outline: transparent;
 }
 .work-link:hover .work-top-text {
@@ -643,8 +641,8 @@ body {
   line-height: 1.56;
   background-color: rgba(33, 150, 243, 0.9);
   color: var(--primary-white-color);
-  transition: var(--trans);
   transform: translateY(100%);
+  transition: var(--trans), color var(--trans), background-color var(--trans);
   overflow: auto;
 }
 
