--- a/css/styles.css
+++ b/css/styles.css
@@ -297,7 +297,7 @@ body {
   cursor: pointer;
   color: var(--primary-text-color);
   background-color: var(--secondary-bg-color);
-  transition: var(--trans), background-color var(--trans), color var(--trans),
+  transition: background-color var(--trans), color var(--trans),
     box-shadow var(--trans);
 }
 
@@ -603,7 +603,8 @@ body {
     0px 1px 1px rgba(0, 0, 0, 0.12);
   outline: transparent;
 }
-.work-link:hover .work-top-text {
+.work-link:hover .work-top-text,
+.work-link:focus .work-top-text {
   transform: translateY(0);
   transition: transform var(--trans);
 }
@@ -770,8 +771,8 @@ body {
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity var(--trans),
+    visibility var(--trans);
 }
 
 .modal {
@@ -783,8 +784,8 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1) rotate(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--trans),
+    border-radius var(--trans);
 }
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0) rotate(-360deg);
